# HomeSweetHome

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/: FUNDING.yml
cmake/: FindSphinx.cmake  Findlibgit2.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cmd_add.cpp  cmd_add.h  cmd_apply.cpp  cmd_apply.h  cmd_data.cpp  cmd_data.h  cmd_diff.cpp  cmd_diff.h  cmd_dump.cpp  cmd_dump.h  cmd_edit.cpp  cmd_edit.h  cmd_forget.cpp  cmd_forget.h  cmd_init.cpp  cmd_init.h  cmd_template.h  main.cpp
src/core/: CMakeLists.txt  app.cpp  app.h  attr.cpp  attr.h  config.cpp  config.h  entry.cpp  entry.h  exceptions.h  modifier.cpp  modifier.h  path_formatter.h  shell_command.cpp  shell_command.h  source_state.cpp  source_state.h  target_state.cpp  target_state.h  template_data.cpp  template_data.h  template_engine.cpp  template_engine.h  utilities.cpp  utilities.h
src/tests/: CMakeLists.txt  main.cpp  test_attr.cpp
